5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1668_1399.log
== TEST (2019-04-15 18:18:43) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b
if (a > 0.50 * total):
	mensagem = "Ambrosio Rutra"
else:
	mensagem = "Demelza Olecram"
print(round(mensagem, 2)
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:19:47) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b
if (a > (0.50 * total)):
	mensagem = "Ambrosio Rutra"
else:
	mensagem = "Demelza Olecram"
print(round(mensagem, 2)
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:20:49) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b
if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
else:
	mensagem = "Demelza Olecram"
print(round(mensagem, 2)
		
-- ERROR:
File "XXXX", line 10
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:22:00) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b
if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
else:
	mensagem = "Demelza Olecram"
print(round(mensagem, 2))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mensagem, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:00) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b
if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
else:
	mensagem = "Demelza Olecram"
print(round(mensagem))
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(mensagem))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:24:22) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b
if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
else:
	mensagem = "Demelza Olecram"
print(mensagem)
		
-- OUTPUT:
Ambrosio Rutra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:25:36) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b
if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
else:
	mensagem = "Demelza Olecram"
print(mensagem)
print(a/a +b)
		
-- OUTPUT:
Ambrosio Rutra
25850001.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:27:34) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = a / a + b
else:
	mensagem = "Demelza Olecram"
	pv = b / a + b
print(mensagem)
print(pv)
		
-- OUTPUT:
Ambrosio Rutra
25850001.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:28:32) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = a / total
else:
	mensagem = "Demelza Olecram"
	pv = b / total
print(mensagem)
print(pv)
		
-- OUTPUT:
Ambrosio Rutra
0.6784425923622341
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:28:43) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = a / total
else:
	mensagem = "Demelza Olecram"
	pv = b / total
print(mensagem)
print(pv)
		
-- EXECUTION TIME:
0.21258
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
0.6784425923622341
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
0.9465696655887854
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
0.6153846153846154
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:29:06) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = a / total
else:
	mensagem = "Demelza Olecram"
	pv = b / total
print(mensagem)
print(round(pv, 2))
		
-- EXECUTION TIME:
0.215228
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
0.68
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
0.95
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
0.62
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:29:31) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = a / total
else:
	mensagem = "Demelza Olecram"
	pv = b / total
print(mensagem)
print(round(pv, 2))
		
-- OUTPUT:
Ambrosio Rutra
0.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:29:55) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = a / total
else:
	mensagem = "Demelza Olecram"
	pv = b / total
print(mensagem)
print(round(pv, 2))
		
-- OUTPUT:
Ambrosio Rutra
0.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:30:00) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = a / total
else:
	mensagem = "Demelza Olecram"
	pv = b / total
print(mensagem)
print(round(pv, 2))
		
-- EXECUTION TIME:
0.216506
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
0.68
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
0.95
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
0.62
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:31:18) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = a / 100
else:
	mensagem = "Demelza Olecram"
	pv = b / 100
print(mensagem)
print(round(pv, 2))
		
-- OUTPUT:
Ambrosio Rutra
545400.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:31:38) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = a / 100
else:
	mensagem = "Demelza Olecram"
	pv = b / 100
print(mensagem)
print(round(pv, 2))
		
-- EXECUTION TIME:
0.148631
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
545400.0
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
222254.69
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
80.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:32:58) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = (a / total) * 100
else:
	mensagem = "Demelza Olecram"
	pv = (b / total) * 100
print(mensagem)
print(round(pv, 2))
		
-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:33:10) 
-- CODE:
a = int(input("escreva a quantidade de votos de Ambrosio: "))
b = int(input("escreva a quantidade de votos de Demelza: "))
total = a + b

if (a > 50/100 * total):
	mensagem = "Ambrosio Rutra"
	pv = (a / total) * 100
else:
	mensagem = "Demelza Olecram"
	pv = (b / total) * 100
print(mensagem)
print(round(pv, 2))
		
-- EXECUTION TIME:
0.157442
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
94.66
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
61.54
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
